FIX: jumpy more sidebar section (#21430)
Bug introduced in PR https://github.com/discourse/discourse/pull/21398

More section needs to be wrapped in div with position:relative to have sticky and absolute position.

--- a/app/assets/stylesheets/common/base/sidebar-more-section-links.scss
+++ b/app/assets/stylesheets/common/base/sidebar-more-section-links.scss
@@ -35,9 +35,14 @@
     padding: 0.33rem calc(var(--d-sidebar-row-horizontal-padding) / 3);
   }
 }
+.sidebar-more-section-links-details-content-main {
+  position: sticky;
+}
 .sidebar-more-section-links-details-content-wrapper {
   position: absolute;
   width: 100%;
   z-index: z("modal", "content") + 1;
-  position: sticky;
+}
+.sidebar-more-section-links-details {
+  position: relative;
 }
